<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    android:orientation="vertical"
    tools:context=".fragment.detai.CrimeDetailFragment">

    <TextView
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/crime_title_label" />

    <EditText
        android:id="@+id/crime_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="Enter a title for the crime" />

    <TextView
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/crime_details_label" />

    <Button
        android:id="@+id/crime_date_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:text="WED NOV 07 15:19:13 EST 2018" />

    <Button
        android:id="@+id/crime_time_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/choose_time_text"
        tools:text="WED NOV 07 15:19:13 EST 2018" />

    <Button
        android:id="@+id/crime_report_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/crime_report_text"
        tools:text="reports" />

    <Button
        android:id="@+id/crime_suspect_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/crime_suspect_text"
        tools:text="suspect" />

    <Button
        android:id="@+id/crime_call_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/crime_call_text"
        tools:text="call" />

    <CheckBox
        android:id="@+id/crime_solved"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/crime_solved_label" />

</LinearLayout>